[package]
name = "s3wf2"
version = "0.3.1"
description = "The official implementaion of S3WF2(ShortStoryServer Writer's Format v2)."
authors = ["Yū Kobayashi <kb10uy@kb10uy.org>"]
license = "Apache-2.0"

homepage = "https://ss.kb10uy.org"
repository = "https://github.com/kb10uy/s3wf2-rs"
readme = "README.md"

edition = "2018"

[features]
cli = ["clap", "ansi_term"]
foreign = ["libc"]
wasm = [
    "wasm-bindgen",
    "console_error_panic_hook",
    "wee_alloc",
    "serde",
    "serde_json",
]

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "s3wf2-cli"
path = "src/s3wf2-cli/main.rs"
required-features = ["cli"]

# Profiles --------------------------------------------------------------------

[profile.release]
lto = true

[package.metadata.docs.rs]
features = ["cli", "foreign", "wasm"]

# Dependencies ----------------------------------------------------------------

[dependencies]
# Common
anyhow = "1.0.42"
regex = { version = "1.5.4", features = ["std", "perf", "unicode-perl"] }
once_cell = "1.8.0"

# CLI application
ansi_term = { version = "0.12.1", optional = true }
clap = { version = "3.0.0-beta.2", optional = true }

# FFI
libc = { version = "0.2.99", optional = true }

# WASM
serde = { version = "1.0.127", features = ["derive"], optional = true }
serde_json = { version = "1.0.66", optional = true }
wasm-bindgen = { version = "0.2.75", optional = true, features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
